--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@heroicons/react": "2.0.18",
     "@reduxjs/toolkit": "1.9.5",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "classnames": "2.3.2",
     "dotenv": "16.3.1",
@@ -19,6 +18,8 @@
     "react-dnd-touch-backend": "16.0.1",
     "react-dom": "18.2.0",
     "react-redux": "8.1.1",
+    "react-router": "6.14.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "5.7.3",
     "redux": "4.2.1",
@@ -64,7 +65,7 @@
     "@babel/preset-env": "7.22.4",
     "@redux-devtools/core": "3.13.1",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "29.5.2",
     "@types/node": "16.18.24",
