--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "ws",
+  "name": "",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "7.21.5",
+    "@babel/preset-typescript": "7.21.5",
     "@heroicons/react": "2.0.18",
+    "@jest/globals": "29.5.0",
     "@reduxjs/toolkit": "1.9.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/user-event": "13.5.0",
+    "@types/node": "16.18.24",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.5",
     "classnames": "2.3.2",
-    "dotenv": "16.3.1",
+    "dotenv": "16.1.3",
     "express": "4.18.2",
-    "framer-motion": "10.12.17",
+    "framer-motion": "10.12.12",
+    "heroicons": "2.0.18",
+    "mini-css-extract-plugin": "2.7.5",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dnd-touch-backend": "16.0.1",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.1",
-    "react-router": "6.14.1",
-    "react-router-dom": "^6.14.1",
+    "react-error-boundary": "^4.0.10",
+    "react-redux": "8.0.5",
+    "react-router": "6.11.1",
+    "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
-    "react-select": "5.7.3",
+    "react-select": "5.7.4",
     "redux": "4.2.1",
-    "typescript": "5.1.6",
+    "redux-thunk": "2.4.2",
+    "typescript": "4.9.5",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4"
   },
@@ -57,29 +69,21 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
   "devDependencies": {
-    "@babel/core": "7.22.6",
+    "@babel/core": "7.22.1",
     "@babel/preset-env": "7.22.4",
     "@redux-devtools/core": "3.13.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "13.5.0",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "29.5.2",
-    "@types/node": "16.18.24",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
     "@types/uuid": "9.0.1",
     "@types/webpack-node-externals": "3.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
     "ajv": "8.12.0",
-    "autoprefixer": "10.4.14",
     "babel-jest": "29.5.0",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.3",
+    "cypress": "12.13.0",
     "eslint": "8.39.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-cypress": "2.13.3",
@@ -88,14 +92,14 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-webpack-plugin": "4.0.1",
+    "fetch-mock": "9.11.0",
+    "gh-pages": "5.0.0",
     "html-webpack-plugin": "5.5.1",
     "interpolate-html-plugin": "4.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-fetch-mock": "3.0.3",
-    "postcss": "8.4.24",
     "postcss-nested": "6.0.1",
-    "postcss-nesting": "12.0.0",
     "react-test-renderer": "18.2.0",
     "redux-mock-store": "1.5.4",
     "regenerator-runtime": "0.13.11",
@@ -106,8 +110,11 @@
     "terser-webpack-plugin": "5.3.7",
     "ts-loader": "9.4.2",
     "webpack": "5.82.0",
-    "webpack-cli": "5.1.4",
-    "webpack-merge": "5.9.0",
+    "webpack-cli": "5.0.2",
+    "webpack-merge": "5.8.0",
     "webpack-node-externals": "3.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
