--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,20 +19,17 @@
     "noFallthroughCasesInSwitch": true,
     "allowUmdGlobalAccess": true,
     "strict": true,
-    // "module": "esnext",
     "moduleResolution": "node",
     "target": "es6",
     "jsx": "react",
     "allowJs": true,
     "typeRoots": ["node_modules/@types", "./src/@types/*.d.ts", "./src/@types/custom.d.ts"],
-    "types": [
-      "node"
-    ],
+    "types": ["cypress", "node"],
     "paths": {
       "*": ["./src/*"]
     },
   },
-  "include": ["src", "**/*.d.ts", "./src/@types/*.d.ts"],
+  "include": ["src", "**/*.d.ts", "./src/@types/*.d.ts", "./cypress.d.ts"],
   "exclude": [
     "node_modues", "**/*.js"
   ]
