--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "2.3.2",
     "dotenv": "16.1.3",
     "express": "4.18.2",
+    "express-winston": "4.2.0",
     "framer-motion": "10.12.12",
     "heroicons": "2.0.18",
     "mini-css-extract-plugin": "2.7.5",
@@ -27,7 +28,7 @@
     "react-dnd-html5-backend": "16.0.1",
     "react-dnd-touch-backend": "16.0.1",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.10",
+    "react-error-boundary": "4.0.10",
     "react-redux": "8.0.5",
     "react-router": "6.11.1",
     "react-router-dom": "6.11.1",
@@ -37,11 +38,14 @@
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
     "uuid": "9.0.0",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "winston": "^3.10.0",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "dev": "webpack serve --mode development --open --hot --stats-error-details --config webpack.dev.ts",
     "start": "node ./build/server.js",
+    "api": "node ./src/server/index.ts",
     "build": "webpack --mode production --config webpack.prod.ts",
     "eslint": "npx eslint ./src",
     "stlint": "npx stylelint '**/*.css' --fix",
@@ -97,7 +101,7 @@
     "fetch-mock": "9.11.0",
     "gh-pages": "5.0.0",
     "html-webpack-plugin": "5.5.1",
-    "interpolate-html-plugin": "4.0.0",
+    "interpolate-html-plugin": "^4.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-fetch-mock": "3.0.3",
