--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.5",
     "classnames": "2.3.2",
+    "cors": "^2.8.5",
     "dotenv": "16.1.3",
     "express": "4.18.2",
     "express-winston": "4.2.0",
     "framer-motion": "10.12.12",
+    "helmet": "^7.0.0",
     "heroicons": "2.0.18",
     "mini-css-extract-plugin": "2.7.5",
     "path": "0.12.7",
@@ -34,6 +36,7 @@
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "5.7.4",
+    "recharts": "2.7.2",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
@@ -80,6 +83,7 @@
     "@babel/preset-env": "7.22.4",
     "@redux-devtools/core": "3.13.1",
     "@testing-library/react": "14.0.0",
+    "@types/cors": "^2.8.13",
     "@types/jest": "29.5.2",
     "@types/uuid": "9.0.1",
     "@types/webpack-node-externals": "3.0.0",
