--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.5",
     "classnames": "2.3.2",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "dotenv": "16.1.3",
     "express": "4.18.2",
     "express-winston": "4.2.0",
     "framer-motion": "10.12.12",
-    "helmet": "^7.0.0",
+    "helmet": "7.0.0",
     "heroicons": "2.0.18",
+    "jsonwebtoken": "9.0.1",
     "mini-css-extract-plugin": "2.7.5",
     "path": "0.12.7",
     "react": "18.2.0",
@@ -42,8 +43,8 @@
     "typescript": "4.9.5",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4",
-    "winston": "^3.10.0",
-    "ws": "^8.13.0"
+    "winston": "3.10.0",
+    "ws": "8.13.0"
   },
   "scripts": {
     "dev": "webpack serve --mode development --open --hot --stats-error-details --config webpack.dev.ts",
@@ -83,8 +84,10 @@
     "@babel/preset-env": "7.22.4",
     "@redux-devtools/core": "3.13.1",
     "@testing-library/react": "14.0.0",
-    "@types/cors": "^2.8.13",
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/uuid": "9.0.1",
     "@types/webpack-node-externals": "3.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.1",
@@ -93,7 +96,7 @@
     "babel-jest": "29.5.0",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.3",
-    "cypress": "12.13.0",
+    "cypress": "12.17.3",
     "eslint": "8.39.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-cypress": "2.13.3",
@@ -105,7 +108,7 @@
     "fetch-mock": "9.11.0",
     "gh-pages": "5.0.0",
     "html-webpack-plugin": "5.5.1",
-    "interpolate-html-plugin": "^4.0.0",
+    "interpolate-html-plugin": "4.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-fetch-mock": "3.0.3",
@@ -121,6 +124,7 @@
     "ts-loader": "9.4.2",
     "webpack": "5.82.0",
     "webpack-cli": "5.0.2",
+    "webpack-dev-server": "4.15.1",
     "webpack-merge": "5.8.0",
     "webpack-node-externals": "3.0.0"
   },
