--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.5",
     "classnames": "2.3.2",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.1.3",
     "express": "4.18.2",
@@ -59,7 +60,9 @@
     "cypress:open": "./node_modules/.bin/cypress open",
     "test": "jest",
     "cy:run": "cypress run",
-    "prepare:run": "npm run cy:run --record --key --spec & npm run build"
+    "prepare:run": "npm run cy:run --record --key --spec & npm run build",
+    "dockerize": "docker build -t wi .",
+    "docker:run": "docker run -d --rm -p 3001:3001 wi"
   },
   "eslintConfig": {
     "extends": [
@@ -84,6 +87,7 @@
     "@babel/preset-env": "7.22.4",
     "@redux-devtools/core": "3.13.1",
     "@testing-library/react": "14.0.0",
+    "@types/cookie-parser": "1.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
