--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "heroicons": "2.0.18",
     "jsonwebtoken": "9.0.1",
     "mini-css-extract-plugin": "2.7.5",
+    "mongoose": "7.4.3",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dnd": "16.0.1",
@@ -43,6 +44,7 @@
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
     "uuid": "9.0.0",
+    "validator": "13.11.0",
     "web-vitals": "2.1.4",
     "winston": "3.10.0",
     "ws": "8.13.0"
@@ -93,6 +95,7 @@
     "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "9.0.2",
     "@types/uuid": "9.0.1",
+    "@types/validator": "13.11.1",
     "@types/webpack-node-externals": "3.0.0",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
