--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-fetch-mock": "3.0.3",
+    "nodemon-webpack-plugin": "4.8.1",
     "postcss-nested": "6.0.1",
     "react-test-renderer": "18.2.0",
     "redux-mock-store": "1.5.4",
